Various updates to the website (documentation part). 1. Delete "Navigation", "Previous" and "Next" from documentation. 2. Fix the alignment issue with Python and Jupyter notebook download in gallery    examples (the buttons appeared underneath, instead of next to one another) and    change their color to blue (from weird yellow). 3. Change the title of "API Reference" to "API Reference for scikit-image Version    x.y". 4. For each entry listed in the gallery page, remove the gradient (more modern look)    and add a dark gray border around it. 5. For each topic in the user guide, add a table of contents in the sidebar. 6. Remove gradient of gallery entries on mouse hover. 7. For each topic in API Reference, move the "source" button to the very right and    enlarge the sentence next to it to make the version very clear. 8. Add a hyperlink to "Download for Development" that leads to "Installation from    Source". 9. List all submodules in skimage at the top of API Reference. 10. Remove "Versions" sidebar and add a prominent block with current version and     a link to scikit-image/docs for other versions.

--- a/doc/source/themes/scikit-image/static/css/custom.css
+++ b/doc/source/themes/scikit-image/static/css/custom.css
@@ -183,7 +183,7 @@ dl.class dd, dl.function dd {
     padding: 10px;
 }
 .docutils.field-list th {
-    background-color: #eee;
+    background-color: #f3f3f3;
     padding: 10px;
     text-align: left;
     vertical-align: top;
@@ -242,4 +242,23 @@ p.admonition-title {
     background-color: #d9edf7;
     border-color: #bce8f1;
 /*    padding: 1em;*/
+}
+
+.viewcode-link {
+    float: right;
+    font-family: monospace;
+}
+
+code.docutils.literal {
+    background-color: transparent;
+    border: none;
+}
+
+td.field-body blockquote {
+    border-left: none;
+    margin-bottom: 0.5em;
+}
+
+td.field-body p {
+    margin-bottom: 0.3em;
 }
